BuildHughes/translation-tool/inputs/source_meta/objects/Message_Mapping__c.object
<CustomObject>
    <description>Holds the codes for error message</description>
    <fields>
        <fullName>EXTCode__c</fullName>
        <label>EXTCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTMessage__c</fullName>
        <label>EXTMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXTStatus__c</fullName>
        <label>EXTStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language of the Message</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Supported_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCCode__c</fullName>
        <label>SFDCCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDCMessage__c</fullName>
        <label>SFDCMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDCStatus__c</fullName>
        <label>SFDCStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>TextArea</type>
    </fields>
    <label>Message Mapping</label>
    <nameField>
        <displayFormat>MM-{000000}</displayFormat>
        <label>Message Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Mapping</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>